<resources>
    <string name="app_name">Doc Collector</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="documents">Documents</string>
    <string name="other">other</string>
    <string name="welcome_to">welcome to</string>
    <string name="doc_collector">Doc Collector</string>
    <string name="please_login_to_continue">Please Login to Continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">OR</string>
    <string name="sign_up">sign Up</string>
    <string name="existing_user">Existing User ?</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="username">Username</string>
    <string name="login_with_mail">Login With Mail</string>
    <string name="login_with_phone">Login With Phone</string>
    <string name="create_account">Create Account</string>
    <string name="save_and_access_your_document">save and access your document</string>
    <string name="sign_with">Sign with</string>
    <string name="from_anywhere">from anywhere</string>
    <string name="sign_with_email">Sign with email</string>
    <string name="sign_with_phone">sign with phone</string>
    <string name="contact_number">Contact number</string>
    <string name="login_with_your_registered">Login with your registered</string>
    <string name="send_otp">send otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_received_otp_below">Enter received OTP below</string>
    <string name="upload">Upload</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="verify">verify</string>
    <string name="images">Images</string>
    <string name="pdf">Pdf</string>
    <string name="download">Download</string>
    <string name="aadhar_card">Aadhar card</string>
    <string name="pan_card">Pan card</string>
    <string name="voter_id">Voter Id</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="delete">Delete</string>
    <string name="list">
        <ol>

        <li>User can login via registered phone no. or email id </li>
        <li>In select type user can choose his login type </li>
        <li>In document filed user can see their uploaded documents </li>
        <li>In upload filed user can upload their documents  </li>
         </ol>
    </string>
    <string name="contact_us">
        <ol>
        <li>Email is provide below you can send your query on that email </li>
        <li>Email : - doccollector100@gmail.com</li>
        </ol>
    </string>
    <string name="sign_in_with_mail">sign in with mail</string>

</resources>