<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_document"
            android:icon="@drawable/document_icon"
            android:title="@string/documents" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/upload_icon"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_icon"
            android:title="@string/help">

        </item>
        <item android:id="@+id/nav_aboutUs"
            android:icon="@drawable/about_us_icon"
            android:title="@string/about">

        </item>
    </group>

</menu>