<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:background="#FF12DDC9"
    android:id="@+id/LinearLayoutRegisterPage1"
    >
    <LinearLayout
        android:id="@+id/LinearLayoutRegisterPage2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ExistingUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_user"
            android:textSize="20sp"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/Login_btn_register_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_round"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#121111" />


    </LinearLayout>
    <View
        android:id="@+id/viewInRegisterPage1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/ic_wave__16_"
        >

    </View>
    <LinearLayout
        android:id="@+id/LinearLayoutRegisterPage3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffff">

        <TextView
            android:id="@+id/sign_up_with_docCollector_registerPage"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginStart="24dp"
            android:text="@string/sign_up_with"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/docCollectorTextViewRegisterPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/doc_collector"
            android:textSize="35sp"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/InputUserNameInRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_layout_yellow"
            android:drawableEnd="@drawable/person_icon"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/InputEmailInRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_layout_yellow"
            android:drawableEnd="@drawable/email_icon_yellow"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/InputPhoneNoInRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_layout_yellow"
            android:drawableEnd="@drawable/phone_icon"
            android:hint="@string/mobile_number"
            android:inputType="number|phone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/InputPasswordInRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_layout_yellow"
            android:drawableEnd="@drawable/password_lock_icon_yellow"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/InputConfirmPasswordInRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_layout_yellow"
            android:drawableEnd="@drawable/password_lock_icon_yellow"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/signup_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_round_yellow"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#FF12DDC9" />

    </LinearLayout>


</LinearLayout>